--- a/.gitignore
+++ b/.gitignore
@@ -330,3 +330,10 @@ ASALocalRun/
 
 # Local History for Visual Studio
 .localhistory/
+
+# vs code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
